--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@worldcoin/idkit": "^1.2.2",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "thirdweb": "^5.45.0",
+    "viem": "^2.19.3"
   },
   "devDependencies": {
     "@types/node": "^20",
