--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "contracts/lib/contracts"]
 	path = contracts/lib/contracts
 	url = https://github.com/thirdweb-dev/contracts
+[submodule "contracts/lib/ccip"]
+	path = contracts/lib/ccip
+	url = https://github.com/smartcontractkit/ccip
